Fixed extra space after scroll in timeline
Workitems:
#9104 Schedule Dashboard- Rolling scrollbar
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C26363

--- a/ShipTech10/app/css/timeline.css
+++ b/ShipTech10/app/css/timeline.css
@@ -6,17 +6,12 @@
 .vis-inner {
 	padding: 0 !important;
 	display: table !important;
-	height: 32px !important;
 }
 
 .vis-label {
-	height: 32px !important;
 	border-color: #e7ecf1 !important;
 }
 
-.vis-group {
-	height: 32px !important;
-}
 
 .vis-custom-group { 
 	/* width: 100%; */
